--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -199,7 +199,7 @@
           </a>
         </article>
         <figure>
-          <img src="../images/Poster.jpg" alt="Power House Surveillance Poster"
+          <img src="../images/phsp.jpg" alt="Power House Surveillance Poster"
             title="Power House Surveillance Poster"/>
         </figure>
       </section>
