--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </section>
       </article>
       <figure>
-        <img src="images/grad1.JPG" alt="Graduation 2017" title="Graduation 2017"/>
+        <img src="images/grad.jpg" alt="Graduation 2017" title="Graduation 2017"/>
       </figure>
     </section>
     <section class="whitespace">
