--- a/resume/index.html
+++ b/resume/index.html
@@ -188,7 +188,7 @@
         </ul>
         </article>
       <figure>
-        <img src="../images/grad1.JPG" alt="Graduation 2017" title="Graduation 2017"/>
+        <img src="../images/grad.jpg" alt="Graduation 2017" title="Graduation 2017"/>
       </figure>
     </section>
     <section id="work">
