--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -199,7 +199,7 @@
           </a>
         </article>
         <figure>
-          <img src="../images/phsp.jpg" alt="Power House Surveillance Poster"
+          <img src="../images/phsp.png" alt="Power House Surveillance Poster"
             title="Power House Surveillance Poster"/>
         </figure>
       </section>
@@ -298,7 +298,7 @@
           </a>
         </article>
         <figure>
-          <img src="../images/fsrr_design.jpg" alt="Robotic Arm and Truck"
+          <img src="../images/fsrr.png" alt="Robotic Arm and Truck"
             title="Robotic Arm and Truck" />
         </figure>
       </section>
