--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -199,8 +199,7 @@
           </a>
         </article>
         <figure>
-          <img src="../images/phsp.png" alt="Power House Surveillance Poster"
-            title="Power House Surveillance Poster"/>
+          <img src="../images/phsp.png" alt="Power House Surveillance Poster" title="Power House Surveillance Poster"/>
         </figure>
       </section>
       <section id="icdesign">
@@ -237,8 +236,7 @@
           </a>
         </article>
         <figure>
-          <img src="../images/ic_diag.jpg" alt="Circuit Design"
-            title="Circuit Design"/>
+          <img src="../images/ic_diag.jpg" alt="Circuit Design" title="Circuit Design"/>
         </figure>
       </section>
       <section id="homeauto">
@@ -262,8 +260,7 @@
           </a>
         </article>
         <figure>
-          <img src="../images/IoTPoster.jpg" alt="Home Automation system Poster"
-            title="Home Automation system Poster"/>
+          <img src="../images/IoTPoster.jpg" alt="Home Automation system Poster" title="Home Automation system Poster"/>
         </figure>
       </section>
     </section>
@@ -298,8 +295,7 @@
           </a>
         </article>
         <figure>
-          <img src="../images/fsrr.png" alt="Robotic Arm and Truck"
-            title="Robotic Arm and Truck" />
+          <img src="../images/fsrr.png" alt="Robotic Arm and Truck" title="Robotic Arm and Truck"/>
         </figure>
       </section>
     </section>
