--- a/contact/index.html
+++ b/contact/index.html
@@ -67,7 +67,7 @@
         </section>
       </article>
       <figure>
-        <img src="../images/grad1.JPG" alt="Graduation 2017" title="Graduation 2017"/>
+        <img src="../images/grad.jpg" alt="Graduation 2017" title="Graduation 2017"/>
       </figure>
     </section>
     <section class="whitespace">
