--- a/resume/index.html
+++ b/resume/index.html
@@ -417,8 +417,7 @@
         </a>
       </article>
       <figure>
-        <img src="../images/finaldesign.png" alt="Final Product" title="Final Product">
-          <figcaption> Power House Webcam </figcaption>
+        <img src="../images/design.jpg" alt="Final Product" title="Final Product"/>
       </figure>
     </section>
       <br />
