--- a/resume/index.html
+++ b/resume/index.html
@@ -417,7 +417,7 @@
         </a>
       </article>
       <figure>
-        <img src="../images/design.jpg" alt="Final Product" title="Final Product"/>
+        <img src="../images/finaldesign.png" alt="Final Product" title="Final Product"/>
       </figure>
     </section>
       <br />
