--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -236,7 +236,7 @@
           </a>
         </article>
         <figure>
-          <img src="../images/ic.png" alt="Circuit Design" title="Circuit Design"/>
+          <img src="../images/ic.png" alt="Circuit Design"/>
         </figure>
       </section>
       <section id="homeauto">
