--- a/resume/index.html
+++ b/resume/index.html
@@ -216,7 +216,7 @@
         <h4>
           <img src="../images/emerson.jpg" alt="Emerson Network Power Logo" title="Emerson Network Power"
           class="logo"/>
-          <span class="bold">Emerson Network Power</span>
+          <span class="bold">Vertiv (Emerson Network Power)</span>
           -- Mumbai, Maharashtra, India
         </h4>
         <p>
