--- a/resume/index.html
+++ b/resume/index.html
@@ -189,6 +189,7 @@
         </article>
       <figure>
         <img src="../images/grad.jpg" alt="Graduation 2017" title="Graduation 2017"/>
+        <figcaption>Graduation 2017</figcaption>
       </figure>
     </section>
     <section id="work">
@@ -418,6 +419,7 @@
       </article>
       <figure>
         <img src="../images/finaldesign.png" alt="Final Product" title="Final Product"/>
+        <figcaption>Final Product at EECS NU Design Expo</figcaption>
       </figure>
     </section>
       <br />
