--- a/contact/index.html
+++ b/contact/index.html
@@ -68,6 +68,7 @@
       </article>
       <figure>
         <img src="../images/grad.jpg" alt="Graduation 2017" title="Graduation 2017"/>
+        <figcaption>Graduation 2017</figcaption>
       </figure>
     </section>
     <section class="whitespace">
