--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -132,6 +132,7 @@
         <figure>
           <img src="../images/personalizabledisplayframe.jpg" alt="Personalizable Display Frame"
             title="Personalizable Display Frame in action at the 2017 NU IOT Design Expo"/>
+            <figcaption>Personalizable Display Frame in action at the 2017 NU IOT Design Expo</figcaption>
         </figure>
       </section>
       <section id="panorama">
@@ -161,6 +162,7 @@
         <figure>
           <img src="../images/pan.jpg" alt="Image Mosiac"
             title="Image Mosiac"/>
+            <figcaption>Northwestern Campus Panorama</figcaption>
         </figure>
       </section>
       <section id="powerhouse">
@@ -200,6 +202,7 @@
         </article>
         <figure>
           <img src="../images/phsp.png" alt="Power House Surveillance Poster" title="Power House Surveillance Poster"/>
+          <figcaption>Poster Presentation at NU Design Expo 2017</figcaption>
         </figure>
       </section>
       <section id="icdesign">
@@ -237,6 +240,7 @@
         </article>
         <figure>
           <img src="../images/circuit.png" alt="Circuit Design"/>
+          <figcaption>Circuit Design</figcaption>
         </figure>
       </section>
       <section id="homeauto">
@@ -261,6 +265,7 @@
         </article>
         <figure>
           <img src="../images/IoTPoster.jpg" alt="Home Automation system Poster" title="Home Automation system Poster"/>
+          <figcaption>Poster Displayed at NU IoT Expo 2017</figcaption>
         </figure>
       </section>
     </section>
@@ -296,6 +301,7 @@
         </article>
         <figure>
           <img src="../images/fsrr.png" alt="Robotic Arm and Truck" title="Robotic Arm and Truck"/>
+          <figcaption>Product Displyed at DJ Spark 2016</figcaption>
         </figure>
       </section>
     </section>
@@ -329,6 +335,7 @@
         <figure>
           <img src="../images/hexa.jpg" alt="Circuit Diagram"
             title="Circuit Diagram" />
+            <figcaption>Hexadecimal Circuit</figcaption>
         </figure>
       </section>
     </section>
@@ -362,6 +369,7 @@
         <figure>
           <img src="../images/samp.png" alt="Sampling Circuit Ouput on CRO"
             title= "Sampling Circuit Ouput on CRO" />
+            <figcaption>Output on CRO</figcaption>
         </figure>
       </section>
     </section>
