Updated Home Page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <p>
           Hi! My name is Karan Shah, and I am a recent graduate of Northwestern University's
           McCormick School of Engineering and Applied Science with a Master of Science degree in
-          Computer Engineering. I completed my undergraduate from Dwarkadas J. Sanghvi College of Engineering, Mumbai, India in Electronics and Telecomuunication.
+          Computer Engineering. I completed my undergraduate from Dwarkadas J. Sanghvi College of Engineering, Mumbai, India in Electronics and Telecomunication.
         </p>
         <p>
           During my studies, I specialized in embedded system design involving
