--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -217,16 +217,9 @@
             The goal of this project was to create switched capacitor based voltage regulator circuit and test the hypothesis of a published paper. 
           </p>
           <p>
-            The model designed is a 2:1 DC-DC voltage converter. Input voltage is provided with 1.2V and 3 PMOS and
-            1 NMOS transistors makes for a total of four switches
-            which are provided with Vpulse (Vphase) thus making
-            circuit work in 2 phases. During the first phase
-            Transistors 1 and 3 works thus, charging the capacitor
-            while in second phase transistors 2 and 4 operates thus
-            giving the output and the ideal output of 0.6 V is
-            obtained near load of 1-1.1kΩ. Also, there are two
-            capacitors used in total; one acts as a flying capacitor
-            while other as an output capacitor. The circuit and layout was designed using Cadence Virtuoso.
+            The model designed is a 2:1 DC-DC voltage converter. Input voltage is provided with 1.2V and 3 PMOS and 1 NMOS transistors makes for a total of four switches which are provided with Vpulse (Vphase) thus making circuit work in 2 phases. During the first phase Transistors 1 and 3 works thus, charging the capacitor
+            while in second phase transistors 2 and 4 operates thus giving the output and the ideal output of 0.6 V is
+            obtained near load of 1-1.1kΩ. Also, there are two capacitors used in total; one acts as a flying capacitor while other as an output capacitor. The circuit and layout was designed using Cadence Virtuoso.
           </p>
           <p>
             For a more detailed overview of this project check out the report linked below.
