--- a/resume/index.html
+++ b/resume/index.html
@@ -253,6 +253,136 @@
         </ul>
       </article>
     </section>
+
+    <section id="certifications">
+      <article>
+        <h2>Certifications</h2>
+        <ul class="smallText">
+         <li>
+            <span class="bold">2018:</span>
+            <ol>
+              <li>
+              Lienar Regression and Modeling -- Jan 2018
+              <br>
+              License: Cousera J7LCQQGET5HB
+              <br>
+              <a href="../pdf/Linear_Regression_Certificate.pdf" target="_blank">See Certificate</a>
+              </li>
+              <br>
+              <li>
+              Embedded System Design with Xilinx -- Jan 2018
+              <br>
+              License: Udemy UC-R247YPLA
+              <br>
+              <a href="../pdf/Embedded_System_Design_Certificate.pdf" target="_blank">See Certificate</a>
+              </li>
+              <br>
+              <li>
+              Machine Learning A-Z ~ Python & R -- Jan 2018
+              <br>
+              License: Udemy UC-H0HA8V5F
+              <br>
+              <a href="../pdf/Machine_Learning_Certificate.pdf" target="_blank">See Certificate</a>
+              </li>
+              <br>
+              <li>
+              Python Bootcamp -- Jan 2018
+              <br>
+              License: Udemy UC-R13MXCUV
+              <br>
+              <a href="../pdf/Python_Bootcamp_Certificate.pdf" target="_blank">See Certificate</a>
+              </li>
+              <br>
+              <li>
+              Verilog HDL Programming -- Jan 2018
+              <br>
+              License: Udemy UC-U4LVUMW5
+              <br>
+              <a href="../pdf/Verilog_HDL_Programming_Certificate.pdf" target="_blank">See Certificate</a>
+              </li>
+              <br>
+              <li>
+              Introduction to VHDL -- Jan 2018
+              <br>
+              License: Udemy UC-EFYHPSKQ
+              <br>
+              <a href="../pdf/VHDL_Certificate.pdf" target="_blank">See Certificate</a>
+              </li>
+            </ol>
+          </li>
+          <br>
+          <li>
+            <span class="bold">2016:</span>
+            <ol>
+              <li>
+              C# Course -- Jun 2016
+              <br>
+              License: SoloLearn 1080-1045186
+              <br>
+              <a href="../pdf/C#_Certificate.pdf" target="_blank">See Certificate</a>
+              </li>
+              <br>
+              <li>
+              Python Course -- Jun 2016
+              <br>
+              License: SoloLearn 1073-1045186
+              <br>
+              <a href="../pdf/Python_Certificate.pdf" target="_blank">See Certificate</a>
+              </li>
+              <br>
+              <li>
+              DJ Spark -- April 2016
+              <br>
+              IETE-SF -- D. J. Sanghvi College of Engineering
+              <br>
+              <a href="../pdf/DJSpark_Certificate.pdf" target="_blank">See Certificate</a>
+              </li>
+              <br>
+              <li>
+              Enhance your Effectiveness -- April 2016
+              <br>
+              Sumances Consultrainers
+              <br>
+              <a href="../pdf/Public_Speaking_Certificate.pdf" target="_blank">See Certificate</a>
+              </li>
+            </ol>
+          </li> 
+          <br>
+          <li>
+            <span class="bold">Earlier than 2015:</span>
+            <ol>
+              <li>
+              Social Service -- Mar 2015
+              <br>
+              Sunday Friends
+              <br>
+              <a href="../pdf/Social_Service_Certificate.pdf" target="_blank">See Certificate</a>
+              </li>
+              <br>
+              <li>
+              Sixth Sense Workshop -- Mar 2014
+              <br>
+              Technophilia
+              <br>
+              <a href="../pdf/Technical_Certificate.pdf" target="_blank">See Certificate</a>
+              </li>
+              <br>
+              <li>
+              Speech and Drama -- September 2005
+              <br>
+              Trinity International Examinations Board
+              <br>
+              <a href="../pdf/Speech_Drama_Certificate.pdf" target="_blank">See Certificate</a>
+              </li>
+            </ol>
+          </li>
+        </ul>
+      </article>
+    </section>
+
+
+
+
     <section id="skills">
       <article>
         <h2>Technical Skills</h2>
@@ -261,8 +391,9 @@
             <span class="bold">Programming Languages:</span>
             <ul class="italic">
               <li>C, C++, C#</li>
-              <li>Python</li>
+              <li>Python, R</li>
               <li>HTML, CSS, JavaScript</li>
+              <li>VHDL, Verilog</li>
             </ul>
           </li>
           <li>
