--- a/resume/index.html
+++ b/resume/index.html
@@ -260,7 +260,7 @@
         <ul class="smallText">
          <li>
             <span class="bold">2018:</span>
-            <ol>
+            <ol class="italic">
               <li>
               Lienar Regression and Modeling -- Jan 2018
               <br>
@@ -313,7 +313,7 @@
           <br>
           <li>
             <span class="bold">2016:</span>
-            <ol>
+            <ol class="italic">
               <li>
               C# Course -- Jun 2016
               <br>
@@ -350,7 +350,7 @@
           <br>
           <li>
             <span class="bold">Earlier than 2015:</span>
-            <ol>
+            <ol class="italic">
               <li>
               Social Service -- Mar 2015
               <br>
