--- a/contact/index.html
+++ b/contact/index.html
@@ -46,8 +46,8 @@
       <article>
         <p>
           <span class="bold">Phone:</span>
-          (224) 307-6402
-          (224) 714-8516
+          +1 (224) 307-6402
+          +1 (224) 714-8516
         </p>
         <p>
           <span class="bold">Email:</span>
@@ -59,6 +59,12 @@
           <span class="bold">LinkedIn:</span>
           <a href="https://www.linkedin.com/in/karan-shah/" target="_blank">
             https://www.linkedin.com/in/karan-shah/
+          </a>
+        </p>
+        <p>
+          <span class="bold">Github:</span>
+          <a href="https://www.github.com/kks3851/" target="_blank">
+            Github Link
           </a>
         </p>
         <section class="buttons">
