--- a/resume/index.html
+++ b/resume/index.html
@@ -262,6 +262,53 @@
             <span class="bold">2018:</span>
             <ol class="italic">
               <li>
+              Tableau Advanced Training in Data Science -- Mar 2018
+              <br>
+              License: Udemy UC-XRC5EGI5
+              <br>
+              <a href="../pdf/Tableau_Advanced_Data_Science_Certificate.pdf" target="_blank">See Certificate</a>
+              </li>
+              <br>
+              <li>
+              SQL and Database Design -- Mar 2018
+              <br>
+              License: Udemy UC-C620D9I4
+              <br>
+              <a href="../pdf/SQL_Database_Design_Certificate.pdf" target="_blank">See Certificate</a>
+              </li>
+              <li>
+              Tableau Training in Data Science -- Mar 2018
+              <br>
+              License: Udemy UC-YZ29JLDI
+              <br>
+              <a href="../pdf/Tableau_Data_Science_Certificate.pdf" target="_blank">See Certificate</a>
+              </li>
+              <br>
+              <li>
+              Algorithms and Data Structures in Python -- Mar 2018
+              <br>
+              License: Udemy UC-QVSK2QM8
+              <br>
+              <a href="../pdf/Algorithms_Datastructure_Python_Certificate.pdf" target="_blank">See Certificate</a>
+              </li>
+              <br>
+              <li>
+               Statistics for Business Analyst-- Mar 2018
+              <br>
+              License: Udemy UC-TK9QSPFE
+              <br>
+              <a href="../pdf/Statistics_for_Business_Analytics_Certificate.pdf" target="_blank">See Certificate</a>
+              </li>
+              <br>
+              <li>
+              VHDL and FPGA Development -- Mar 2018
+              <br>
+              License: Udemy UC-QRV0OH7Y
+              <br>
+              <a href="../pdf/VHDL_FPGA_Development_Certificate.pdf" target="_blank">See Certificate</a>
+              </li>
+              <br>
+              <li>
               Lienar Regression and Modeling -- Jan 2018
               <br>
               License: Cousera J7LCQQGET5HB
@@ -390,10 +437,11 @@
           <li>
             <span class="bold">Programming Languages:</span>
             <ul class="italic">
-              <li>C, C++, C#</li>
+              <li>C, C++, C#, Java</li>
               <li>Python, R</li>
               <li>HTML, CSS, JavaScript</li>
               <li>VHDL, Verilog</li>
+              <li>SQL</li>
             </ul>
           </li>
           <li>
@@ -403,6 +451,8 @@
               <li>Onshape CAD</li>
               <li>MATLAB</li>
               <li>VHDL</li>
+              <li>Tableau</li>
+              <li>PostgreSQL, MS SQL  Server Management</li>
               <li>OrCAD</li>
               <li>Cadence Virtuoso</li>
               <li>Xilinx</li>
