Work Experience and Project Updated

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -26,6 +26,9 @@
         <a href="index.html"><i class="flaticon-folder"></i> Project Portfolio </a>
         <ul class="dropcontent">
           <li>
+            <a href="#2018" onclick="openNav()"> 2018 </a>
+          </li>
+          <li>
             <a href="#2017" onclick="openNav()"> 2017 </a>
           </li>
           <li>
@@ -56,15 +59,147 @@
     <h2 class="subtitle">Projects</h2>
   </header>
   <main>
+    <section id="2018">
+      <h2>2018</h2>
+        <section id="cryptocurrency">
+        <article>
+          <h3>
+            <span class="bold">Cryptocurrency Trading Bot</span> -- Artificial Intelligence
+          </h3>
+          <p>
+            Cryptocurrency Trading Bot was created by Karan Shah and a team of 3 people during my experience at Vision13 Technologies from March 2018 to July 2018.
+          </p>
+          <p>
+            The goal of this project was to create an algorithm to predict cryptocurrency prices using Artificial Intelligence.
+            The key feature of the product use of AI which makes the use of this product easier and less dependent on user.
+          </p>
+          <p>
+            Due to intellectual property, I can't divulge more into the working of the product.
+          </p>
+          <p>
+            We used Alpha GO Zero as a benchmark to design the algorithm.
+          </p>
+          <p>
+            We used the following technologies to implement our design:
+            <ul>
+              <li>
+                Algorithm
+                <ul class="italic smallText">
+                  <li>
+                    NodeJS JavaScript
+                  </li>
+                  <li>
+                    Python
+                  </li>
+                  <li>
+                    External Libraries
+                  </li>
+                </ul>
+              </li>
+              <li>
+                Web Scrapper
+                <ul class="italic smallText">
+                  <li>
+                    Python
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </p>
+          <p>
+            For a more detailed overview of this project check out the documents linked below.
+          </p>
+          <a href="../pdf/cryptocurrency_final.pdf" target="_blank">Report</a>
+          <br />
+          <br />
+          <a href="https://github.com/kks3851/IoTDataLogger" target="_blank">
+            View source code on GitHub
+          </a>
+        </article>
+        <figure>
+          <img src="../images/datalogger.jpg" alt="Data Logger in action"
+            title="Data Logger"/>
+            <figcaption>IoT based Data Logger</figcaption>
+        </figure>
+      </section>
+    </section>
     <section id="2017">
       <h2>2017</h2>
+      <section id="datalogger">
+        <article>
+          <h3>
+            <span class="bold">IoT Based Data Logger</span> -- Internet of Things
+          </h3>
+          <p>
+            IoT Based Data Logger was created by Karan Shah during the internship at Merlin Solar Technologies from June 2017 to September 2017.
+          </p>
+          <p>
+            The goal of this project was to create an Internet-based data logger, similar to
+            other products currently on the market, with an accompanying web application to display graphs and store the values.
+            The key feature of the product is a design targeting usage in remote places-- users can view the details about the system via the website.
+          </p>
+          <p>
+            For example, a user wants to the data collected from the module for the past one week. The user needs to log-in into the website, select the data logger for which the data needs to be verified. The user then sees the different graphs mentioning the data for voltage, current, power and run time of the system.
+          </p>
+          <p>
+            We used an external router and RDMS to host the website and store data.This can be expanded to larger scales as necessary.
+          </p>
+          <p>
+            We used the following technologies to implement our design:
+            <ul>
+              <li>
+                Web Application
+                <ul class="italic smallText">
+                  <li>
+                    Front end: HTML, CSS, JavaScript
+                  </li>
+                  <li>
+                    Back end: Java,Hibernate, Spring, mySQL
+                  </li>
+                  <li>
+                    IoT Platform: ThingSpeak
+                  </li>
+                </ul>
+              </li>
+              <li>
+                Data Logger
+                <ul class="italic smallText">
+                  <li>
+                    Arduino Modules
+                  </li>
+                  <li>
+                    PCB
+                  </li>
+                  <li>
+                    Regulators and Shunt
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </p>
+          <p>
+            For a more detailed overview of this project check out the documents linked below.
+          </p>
+          <a href="../pdf/datalogger_final.pdf" target="_blank">Report</a>
+          <br />
+          <br />
+          <a href="https://github.com/kks3851/IoTDataLogger" target="_blank">
+            View source code on GitHub
+          </a>
+        </article>
+        <figure>
+          <img src="../images/datalogger.jpg" alt="Data Logger in action"
+            title="Data Logger"/>
+            <figcaption>IoT based Data Logger</figcaption>
+        </figure>
+      </section>
       <section id="displayframe">
         <article>
           <h3>
             <span class="bold">Personalizable Display Frame</span> -- Internet of Things Picture Frame
           </h3>
           <p>
-            Personalizable Display Frame was created by Karan Shah and myself at the behest of a
+            Personalizable Display Frame was created by Alex and myself at the behest of a
             third-party client during the course of EECS 347-I and II (Microprocessor System
             Projects) at Northwestern University.
           </p>
