--- a/resume/index.html
+++ b/resume/index.html
@@ -196,6 +196,26 @@
       <article>
         <h2>Work Experience</h2>
         <h4>
+          <!-- <img src="../images/merlin logo.jpg" alt="Merlin Solar Technologies Logo" title="Merlin Solar Technologies"
+          class="logo"/> -->
+          <span class="bold">Vision13 Technologies</span>
+          -- Remote, USA
+        </h4>
+        <p>
+          <span class="bold">Role:</span>
+          Program Intern -- March 2018 to July 2018
+        </p>
+        <ul class="italic smallText">
+          <li>
+            Developed a Cryptocurrency Trading Software using Artificial Intelligence to predict future prices of cryptocurrency coins using different exchanges.  
+            Also, designed a cryptocurrency mining rig to generate crypto coins using Nvidia Graphic card.
+          </li>
+          <li>
+            Gained valuable experience working in a startup environment with time constraints and learning new technologies. 
+          </li>
+        </ul>
+        <h4>
+        <h4>
           <img src="../images/merlin logo.jpg" alt="Merlin Solar Technologies Logo" title="Merlin Solar Technologies"
           class="logo"/>
           <span class="bold">Merlin Solar Technologies</span>
@@ -469,6 +489,112 @@
     </section>
     <section id="projects">
       <h2>Projects</h2>
+      <section id="cryptocurrency">
+      <article>
+        <h3>
+          <span class="bold">Crytocurrency Trading Bot</span>
+          -- Vision13 Technologies
+        </h3>
+        <p>
+          <span class="bold">Goal:</span>
+          An algorithm to trade cyrptocurrency and predict the future prices of different coins.
+        </p>
+        <p>
+          <span class="bold">Overview:</span>
+          The key feature of the product is that the user only needs to add the exchange details and the rest of the trading is automated.
+        </p>
+        <p>
+          <span class="bold">Design:</span>
+          There two main aspects to the design: AI Algorithm and Web Scrapper. We used the following technologies to implement them:
+          <ul class="smallText">
+            <li>
+              <span class="bold">Algorithm:</span>
+              <ul class="italic">
+                <li>NodeJS</li>
+                <li>Python</li>
+                <li>Cryptocurrency Exchanges </li>
+              </ul>
+            </li>
+            <li>
+              <span class="bold">Web Scrapper:</span>
+              <ul class="italic">
+                <li>Python</li>
+              </ul>
+            </li>
+          </ul>
+        </p>
+        <p>
+          For a more detailed overview of this project, visit the
+          <a href="../portfolio/index.html#cryptocurrency">Projects Page</a>
+          or check out the documents linked below.
+        </p>
+        <a href="../pdf/cryptocurrency_final.pdf" target="_blank">Final Report</a>
+        <br />
+        <br />
+        <!-- <a href="https://github.com/kks3851/Cryptocurrency" target="_blank">
+          View source code on GitHub
+         </a>-->
+      </article>
+    </section>
+      <section id="datalogger">
+      <article>
+        <h3>
+          <span class="bold">IoT Based Data Logger</span>
+          -- Merlin Solar Technologies
+        </h3>
+        <p>
+          <span class="bold">Goal:</span>
+          An internet-connected data logger to gather and display information about solar panels and battery with remote management capabilities
+        </p>
+        <p>
+          <span class="bold">Overview:</span>
+          The key feature of the product is the small size along with real time information and values of the solar module from a remote place anywhere in the US to the user. 
+        </p>
+        <p>
+          <span class="bold">Design:</span>
+          There are two main aspects to the design: Data Logger hardware for gathering data and the server
+          itself. We used the following technologies to implement them:
+          <ul class="smallText">
+            <li>
+              <span class="bold">Data Logger:</span>
+              <ul class="italic">
+                <li>Arduino</li>
+                <li>Voltage Regulator</li>
+                <li>PCB </li>
+                <li>Current Shunt</li>
+                <li>Power Supply</li>
+              </ul>
+            </li>
+            <li>
+              <span class="bold">Server:</span>
+              <ul class="italic">
+                <li>Router</li>
+                <li>Java Script to connect the database to the website</li>
+                <li>ThingSpeak Platform</li>
+              </ul>
+            </li>
+          </ul>
+        </p>
+        <p>
+          For a more detailed overview of this project, visit the
+          <a href="../portfolio/index.html#datalogger">Projects Page</a>
+          or check out the documents linked below.
+        </p>
+        <a href="../pdf/datalogger_final.pdf" target="_blank">Report</a>
+        <br />
+        <br />
+        <a href="https://github.com/kks3851/IoTDataLogger" target="_blank">
+          View source code on GitHub
+        </a>
+      </article>
+      <figure>
+        <img src="../images/datalogger.jpg"
+          alt="Data Logger in action" title="Data Logger"/>
+          <figcaption>IoT Based Data Logger</figcaption>
+      </figure>
+    </section>
+      <br />
+      <br />
       <section id="displayframe">
       <article>
         <h3>
@@ -607,7 +733,7 @@
       <br />
       <article>
         <p>
-          Please note that these represent two of my major projects at Northwestern. To see my
+          Please note that these represent some of my major projects. To see my
           other projects, please visit the
           <a href="../portfolio/index.html">Projects Page</a>.
           </thead>
