Added Allenbradley pdf

--- a/resume/index.html
+++ b/resume/index.html
@@ -278,6 +278,20 @@
       <article>
         <h2>Certifications</h2>
         <ul class="smallText">
+          <li>
+            <span class="bold">2019:</span>
+            <ol class="italic">
+              <li>
+              Allen Bradley PLC Training-RSLogix 5000 Series -- Jan 2009
+              <br>
+              License: Udemy UC-VM6EKII6
+              <br>
+              <a href="../pdf/Allen_Bradley_PLC_Certificate.pdf" target="_blank">See Certificate</a>
+              </li>
+            </ol>
+          </li>
+          <br>
+          <li>
          <li>
             <span class="bold">2018:</span>
             <ol class="italic">
